Add environment configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 node_modules
+# Environment variables (local only)
+.env.local
+.env.*.local
+.env
+
+# Next.js build files
+.next/
+out/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+
+# OS
+.DS_Store
+Thumbs.db
